--- a/packages/package.authentication/package.json
+++ b/packages/package.authentication/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "@bhotel/authentication",
+  "type": "module",
+  "types": "./build/index.d.ts",
+  "main": "./build/index.js",
+  "author": "Alexei Wolkow",
   "dependencies": {
+    "@bhotel/interfaces": "./../package.interfaces",
     "@trpc/server": "^10.45.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/pg": "^8.10.9",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   }
 }
