--- a/services/server/service.authentication/package.json
+++ b/services/server/service.authentication/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@bhotel/interfaces": "file:./../../../packages/package.interfaces",
     "@trpc/client": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "jest": "^29.7.0",
