--- a/packages/package.authentication/package.json
+++ b/packages/package.authentication/package.json
@@ -9,7 +9,7 @@
 		"build": "tsc"
 	},
 	"dependencies": {
-		"@bhotel/interfaces": "./../package.interfaces",
+		"@bhotel/interfaces": "file:../package.interfaces",
 		"@trpc/server": "^10.45.0",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/pg": "^8.10.9",
