--- a/services/client/service.admin/package.json
+++ b/services/client/service.admin/package.json
@@ -19,12 +19,16 @@
 		"antd": "^5.12.1",
 		"axios": "^1.6.2",
 		"dayjs": "^1.11.10",
+		"echarts": "^5.4.3",
 		"echarts-for-react": "^3.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.0.2",
 		"react-router-dom": "^6.20.1",
-		"react-to-print": "^2.14.15"
+		"react-to-print": "^2.14.15",
+		"redux-thunk": "^2.4.2",
+		"redux-toolkit": "^1.1.2",
+		"tslib": "^2.6.2"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.37",
